[package]
name = "sally_says_bot"
version = "0.1.0"
authors = ["daniel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4", features = ["auto-send"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.4"
rand = "0.8.3"
rand_chacha = "0.3.0"
anyhow = "1.0"

# Used to setup a webhook
warp = "0.3.0"
reqwest = "0.10.4"
serde_json = "1.0.50"
